[gradle] change versions and dependencies